...
    
    func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            statisticService?.store(correct: correctAnswers, total: self.questionsCount)
            
            let alertModel = AlertModel(
                title: "Игра окончена!",
                message: (viewController?.makeResultMessage())!,
                buttonText: "ОК",
                buttonAction: { [weak self ] in
                    self?.resetQuestionIndex()
                    self?.correctAnswers = 0
                    self?.questionFactory?.requestNextQuestion()
...
